--- a/index.html
+++ b/index.html
@@ -3,107 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
+        rel="stylesheet">
     <title>Portfolio</title>
+    <link rel="stylesheet" 
+          href="./css/styles.css" />
 </head>
 
 <body>
     <header>
         <nav>
-            <a href="./index.html">WebStudio</a>
-            <ul>
-                <li><a href="./studio.html">Studio</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contacts</a></li>
+            <a href="./index.html" class="logo link">
+                WEB<span class="studio-color">Studio</span>
+                </a>
+            <ul class="list">
+                <li>
+                    <a href="./studio.html" class="logo-class font link">Studio</a>
+                </li>
+                <li>
+                    <a href="./portfolio.html" class="logo-class font link">Portfolio</a>
+                </li>
+                <li>
+                    <a href="" class="logo-class font link">Contacts</a>
+                </li>
             </ul>
         </nav>
-        <address>
-            <ul>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <address class="addresss-details">
+            <ul class="list">
+                <li>
+                    <a href="mailto:info@devstudio.com"
+                    class="li-links link">info@devstudio.com</a>
+                </li>
+                <li>
+                    <a href="tel:+110001111111" 
+                    class="li-links">+11 (000) 111-11-11</a>
+                </li>
             </ul>
         </address>
     </header>
     <main>
-        <section>
-            <h1>Effective Solutions for Your Business</h1>
-            <button type="button">Order Service</button>
+        <section class="section-details">
+            <h1 class="top-class">Effective Solutions for Your Business</h1>
+            <button type="button" class="button-class">Order Service</button>
         </section>
 
         <section>
-            <h2>Ore Philosophy</h2>
-            <ul>
+            <h2 class="h3-class">Ore Philosophy</h2>
+            <ul class="list">
                 <li>
-                    <h3>Strategy</h3>
-                    <p>
+                    <h3 class="sol-class">Strategy</h3>
+                    <p class="class-port">
                         Our goal is to identify the business problem to walk away with the perfect and creative solution.
                     </p>
                 </li>
                 <li>
-                    <h3>Punctuality</h3>
-                    <p>
+                    <h3 class="sol-class">Punctuality</h3>
+                    <p class="class-port">
                         Bring the key message to the brand's audience for the best price within the shortest possible time.
                     </p>
                 </li>
                 <li>
-                    <h3>Diligence</h3>
-                    <p>
+                    <h3 class="sol-class">Diligence</h3>
+                    <p class="class-port">
                         Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
                     </p>
                 </li>
                 <li>
-                    <h3>Technologies</h3>
-                    <p>
+                    <h3 class="sol-class">Technologies</h3>
+                    <p class="class-port">
                         Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
                     </p>
                 </li>
             </ul>
         </section>
 
-        <section>
-            <h2>Our Team</h2>
-            <ul>
-                <li>
+        <section class="team-section">
+            <h2 clss="foto-class">Our Team</h2>
+            <ul class="list">
+                <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg"
                          alt="young man"
                          width="264"
                          height="260" />
-                    <h3>Mark Guerrero</h3>
-                    <p>Product Designer</p>
+                    <h3 class="sol-class">Mark Guerrero</h3>
+                    <p class="class-port">Product Designer</p>
                 </li>  
 
-                <li>
+                <li class="outeam-section">
                     <img src="./images/02.Tom.jpg"
                          alt="young man"
                          width="264"
                          height="260" />
-                    <h3>Tom Ford</h3>
-                    <p>Frontend Developer</p>     
+                    <h3 class="sol-class">Tom Ford</h3>
+                    <p class="class-port">Frontend Developer</p>     
                 </li> 
 
-                <li>
+                <li class="outeam-section">
                     <img src="./images/03.Camila.jpg"
                          alt="young women"
                          width="264"
                          height="260" />
-                    <h3>Camila Garcia</h3>
-                    <p>Marketing</p>
+                    <h3 class="sol-class">Camila Garcia</h3>
+                    <p class="class-port">Marketing</p>
                 </li>
 
-                <li>
+                <li class="outeam-section">
                     <img src="./images/04.Daniel.jpg"
                          alt="young man"
                          width="264"
                          height="260" />
-                    <h3>Daniel Wilson</h3>
-                    <p>UI Designer</p>
+                    <h3 class="sol-class">Daniel Wilson</h3>
+                    <p class="class-port">UI Designer</p>
+                </li>
+            </ul>
+        </section>
+
+        <section>
+            <h2 class="sec-head">Our Portfolio</h2>
+            <ul>
+                <li class="second-class list">
+                    <img src="./images/bank.jpg"
+                         alt="Banking app"
+                         width="360"
+                         height="300" />
+                    <h3 class="sol-class">Banking App</h3>     
+                    <p class="class-port">App</p>
+                </li>
+
+                <li class="second-class list">
+                    <img src="./images/cas.jpg"
+                    alt="Cashless payment"
+                    width="360"
+                    height="300" />
+                    <h3 class="sol-class">Cashless Payment</h3>
+                    <p class="class-port">MArketing</p>
+                </li>
+
+                <li class="second-class list">
+                    <img src="./images/app.jpg"
+                    alt="Medition App"
+                    width="360"
+                    height="300" />
+                    <h3 class="sol-class">Meditation App</h3>
+                    <p class="class-port">App</p>
+                </li>
+
+                <li class="second-class list">
+                    <img src="./images/taxi.jpg"
+                    alt="Taxi"
+                    width="360"
+                    height="300" />
+                    <h3 class="sol-class">Taxi Service</h3>
+                    <p class="class-port">Marketing</p>
+                </li>
+
+                <li class="second-class list">
+                    <img src="./images/screen.jpg"
+                    alt="screen Illustrations"
+                    width="360"
+                    height="300" />
+                    <h3 class="sol-class">Screen Illustrations</h3>
+                    <p class="class-port">Desing</p>
+                </li>
+
+                <li class="second-class list">
+                    <img src="./images/online.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300" />
+                    <h3 class="sol-class">Online Courses</h3>
+                    <p class="class-port">Markrting</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
+    <footer claass="portfolio-footer">
+        <a class="logo link" href="./index.html">Web<span class=studio-class>Studio</span>Studio</a>
+        <p class="footer-acapit">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
