--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         </section>
 
         <section>
-            <h2 class="sec-head">Our Portfolio</h2>
+            <h2 class="foto-class">Our Portfolio</h2>
             <ul>
                 <li class="second-class list">
                     <img src="./images/bank.jpg"
@@ -139,7 +139,7 @@
                     width="360"
                     height="300" />
                     <h3 class="sol-class">Cashless Payment</h3>
-                    <p class="class-port">MArketing</p>
+                    <p class="class-port">Marketing</p>
                 </li>
 
                 <li class="second-class list">
@@ -166,7 +166,7 @@
                     width="360"
                     height="300" />
                     <h3 class="sol-class">Screen Illustrations</h3>
-                    <p class="class-port">Desing</p>
+                    <p class="class-port">Design</p>
                 </li>
 
                 <li class="second-class list">
@@ -175,7 +175,7 @@
                     width="360"
                     height="300" />
                     <h3 class="sol-class">Online Courses</h3>
-                    <p class="class-port">Markrting</p>
+                    <p class="class-port">Marketing</p>
                 </li>
             </ul>
         </section>
