--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo link">
+            <a href="./index.html" class="logo">
                 WEB<span class="studio-color">Studio</span>
                 </a>
             <ul class="list">
                 <li>
-                    <a href="./studio.html" class="logo-class font link">Studio</a>
+                    <a href="" class="logo-class font link">Studio</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html" class="logo-class font link">Portfolio</a>
+                    <a href="" class="logo-class font link">Portfolio</a>
                 </li>
                 <li>
                     <a href="" class="logo-class font link">Contacts</a>
@@ -39,7 +39,7 @@
                 </li>
                 <li>
                     <a href="tel:+110001111111" 
-                    class="li-links">+11 (000) 111-11-11</a>
+                    class="li-links link">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -92,7 +92,7 @@
                     <p class="class-port">Product Designer</p>
                 </li>  
 
-                <li class="outeam-section">
+                <li class="ourteam-section">
                     <img src="./images/02.Tom.jpg"
                          alt="young man"
                          width="264"
@@ -101,7 +101,7 @@
                     <p class="class-port">Frontend Developer</p>     
                 </li> 
 
-                <li class="outeam-section">
+                <li class="ourteam-section">
                     <img src="./images/03.Camila.jpg"
                          alt="young women"
                          width="264"
@@ -110,7 +110,7 @@
                     <p class="class-port">Marketing</p>
                 </li>
 
-                <li class="outeam-section">
+                <li class="ourteam-section">
                     <img src="./images/04.Daniel.jpg"
                          alt="young man"
                          width="264"
@@ -121,7 +121,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="team-section">
             <h2 class="foto-class">Our Portfolio</h2>
             <ul>
                 <li class="second-class list">
@@ -182,7 +182,7 @@
     </main>
 
     <footer claass="portfolio-footer">
-        <a class="logo link" href="./index.html">Web<span class=studio-class>Studio</span>Studio</a>
+        <a class="logo" href="./index.html">Web<span class=studio-class>Studio</span>Studio</a>
         <p class="footer-acapit">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
