--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <nav>
-            <a href="./index.html" class="logo">
+            <a class="logo" href="./index.html">
                 WEB<span class="studio-color">Studio</span>
                 </a>
             <ul class="list">
@@ -81,7 +81,7 @@
         </section>
 
         <section class="team-section">
-            <h2 clss="foto-class">Our Team</h2>
+            <h2 clss="h3-class">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg"
@@ -122,7 +122,7 @@
         </section>
 
         <section class="team-section">
-            <h2 class="foto-class">Our Portfolio</h2>
+            <h2 class="h3-class">Our Portfolio</h2>
             <ul>
                 <li class="second-class list">
                     <img src="./images/bank.jpg"
@@ -181,7 +181,7 @@
         </section>
     </main>
 
-    <footer claass="portfolio-footer">
+    <footer claas="portfolio-footer">
         <a class="logo" href="./index.html">Web<span class=studio-class>Studio</span>Studio</a>
         <p class="footer-acapit">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
