--- a/index.html
+++ b/index.html
@@ -15,16 +15,14 @@
 
 <body>
     <header>
-        <ul class="list">
         <nav>
-            <li>
-            <a class="logo" href="./index.html">
+            <a href="./index.html" class="logo">
                 WEB<span class="studio-color">Studio</span>
                 </a>
+            <ul class="list">
+            <li>
+                <a href="./index.html" class="logo-class font link">Studio</a>
             </li>
-                <li>
-                    <a href="" class="logo-class font link">Studio</a>
-                </li>
                 <li>
                     <a href="" class="logo-class font link">Portfolio</a>
                 </li>
