--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
         <section class="team-section">
-            <h2 clss="foto-class">Our Team</h2>
+            <h2 clss="team">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg"
@@ -122,7 +122,7 @@
         </section>
 
         <section class="team-section">
-            <h2 class="foto-class">Our Portfolio</h2>
+            <h2 class="team">Our Portfolio</h2>
             <ul>
                 <li class="second-class list">
                     <img src="./images/bank.jpg"
@@ -183,7 +183,7 @@
 
     <footer claas="portfolio">
         <a class="logo" href="./index.html">Web<span class=studio-class>Studio</span>Studio</a>
-        <p class="footer-acapit">
+        <p class="acapit">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
         </p>
     </footer>
