--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section>
-            <h2 class="foto-class">Ore Philosophy</h2>
+            <h2 class="team">Ore Philosophy</h2>
             <ul class="list">
                 <li>
                     <h3 class="sol-class">Strategy</h3>
