--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
         <section class="team-section">
-            <h2 clss="foto-class">Our Team</h2>
+            <h2 clss="philosophy">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg"
@@ -122,7 +122,7 @@
         </section>
 
         <section class="team-section">
-            <h2 class="foto-class">Our Portfolio</h2>
+            <h2 class="philosophy">Our Portfolio</h2>
             <ul>
                 <li class="second-class list">
                     <img src="./images/bank.jpg"
