--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
         <section class="team-section">
-            <h2 clss="philosophy">Our Team</h2>
+            <h2 clss="src">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg"
@@ -122,8 +122,8 @@
         </section>
 
         <section class="team-section">
-            <h2 class="philosophy">Our Portfolio</h2>
-            <ul>
+            <h2 class="src">Our Portfolio</h2>
+            <ul class="list">
                 <li class="second-class list">
                     <img src="./images/bank.jpg"
                          alt="Banking app"
