--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </section>
 
         <section>
-            <h2 class="foto-class">Ore Philosophy</h2>
+            <h2 class="philosophy">Ore Philosophy</h2>
             <ul class="list">
                 <li>
                     <h3 class="sol-class">Strategy</h3>
@@ -81,7 +81,7 @@
         </section>
 
         <section class="team-section">
-            <h2 clss="src">Our Team</h2>
+            <h2 clss="src-team">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg"
@@ -122,7 +122,7 @@
         </section>
 
         <section class="team-section">
-            <h2 class="src">Our Portfolio</h2>
+            <h2 class="strategy">Our Portfolio</h2>
             <ul class="list">
                 <li class="second-class list">
                     <img src="./images/bank.jpg"
