--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </section>
 
         <section class="team-section">
-            <h2 clss="src-team">Our Team</h2>
+            <h2 clss="strategy">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg"
