--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <title>Portfolio</title>
-    <link rel="stylesheet" 
-          href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
@@ -18,11 +18,11 @@
         <nav>
             <a href="./index.html" class="logo">
                 WEB<span class="studio-color">Studio</span>
-                </a>
+            </a>
             <ul class="list">
-            <li>
-                <a href="./index.html" class="logo-class font link">Studio</a>
-            </li>
+                <li>
+                    <a href="./index.html" class="logo-class font link">Studio</a>
+                </li>
                 <li>
                     <a href="" class="logo-class font link">Portfolio</a>
                 </li>
@@ -34,12 +34,10 @@
         <address class="addresss-details">
             <ul class="list">
                 <li>
-                    <a href="mailto:info@devstudio.com"
-                    class="li-links link">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="li-links link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+110001111111" 
-                    class="li-links link">+11 (000) 111-11-11</a>
+                    <a href="tel:+110001111111" class="li-links link">+11 (000) 111-11-11</a>
                 </li>
             </ul>
         </address>
@@ -56,25 +54,29 @@
                 <li>
                     <h3 class="sol-class">Strategy</h3>
                     <p class="class-port">
-                        Our goal is to identify the business problem to walk away with the perfect and creative solution.
+                        Our goal is to identify the business problem to walk away with the perfect and creative
+                        solution.
                     </p>
                 </li>
                 <li>
                     <h3 class="sol-class">Punctuality</h3>
                     <p class="class-port">
-                        Bring the key message to the brand's audience for the best price within the shortest possible time.
+                        Bring the key message to the brand's audience for the best price within the shortest possible
+                        time.
                     </p>
                 </li>
                 <li>
                     <h3 class="sol-class">Diligence</h3>
                     <p class="class-port">
-                        Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
+                        Research and confirm brands that present the strongest digital growth opportunities and minimize
+                        risk.
                     </p>
                 </li>
                 <li>
                     <h3 class="sol-class">Technologies</h3>
                     <p class="class-port">
-                        Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
+                        Design practice focused on digital experiences. We bring forth a deep passion for
+                        problem-solving.
                     </p>
                 </li>
             </ul>
@@ -84,37 +86,25 @@
             <h2 clss="strategy">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
-                    <img src="./images/01.Mark.jpg"
-                         alt="young man"
-                         width="264"
-                         height="260" />
+                    <img src="./images/01.Mark.jpg" alt="young man" width="264" height="260" />
                     <h3 class="sol-class">Mark Guerrero</h3>
                     <p class="class-port">Product Designer</p>
-                </li>  
+                </li>
 
                 <li class="ourteam-section">
-                    <img src="./images/02.Tom.jpg"
-                         alt="young man"
-                         width="264"
-                         height="260" />
+                    <img src="./images/02.Tom.jpg" alt="young man" width="264" height="260" />
                     <h3 class="sol-class">Tom Ford</h3>
-                    <p class="class-port">Frontend Developer</p>     
-                </li> 
+                    <p class="class-port">Frontend Developer</p>
+                </li>
 
                 <li class="ourteam-section">
-                    <img src="./images/03.Camila.jpg"
-                         alt="young women"
-                         width="264"
-                         height="260" />
+                    <img src="./images/03.Camila.jpg" alt="young women" width="264" height="260" />
                     <h3 class="sol-class">Camila Garcia</h3>
                     <p class="class-port">Marketing</p>
                 </li>
 
                 <li class="ourteam-section">
-                    <img src="./images/04.Daniel.jpg"
-                         alt="young man"
-                         width="264"
-                         height="260" />
+                    <img src="./images/04.Daniel.jpg" alt="young man" width="264" height="260" />
                     <h3 class="sol-class">Daniel Wilson</h3>
                     <p class="class-port">UI Designer</p>
                 </li>
@@ -125,55 +115,37 @@
             <h2 class="strategy">Our Portfolio</h2>
             <ul class="list">
                 <li class="second-class list">
-                    <img src="./images/bank.jpg"
-                         alt="Banking app"
-                         width="360"
-                         height="300" />
-                    <h3 class="sol-class">Banking App</h3>     
+                    <img src="./images/bank.jpg" alt="Banking app" width="360" height="300" />
+                    <h3 class="sol-class">Banking App</h3>
                     <p class="class-port">App</p>
                 </li>
 
                 <li class="second-class list">
-                    <img src="./images/cas.jpg"
-                    alt="Cashless payment"
-                    width="360"
-                    height="300" />
+                    <img src="./images/cas.jpg" alt="Cashless payment" width="360" height="300" />
                     <h3 class="sol-class">Cashless Payment</h3>
                     <p class="class-port">Marketing</p>
                 </li>
 
                 <li class="second-class list">
-                    <img src="./images/app.jpg"
-                    alt="Medition App"
-                    width="360"
-                    height="300" />
+                    <img src="./images/app.jpg" alt="Medition App" width="360" height="300" />
                     <h3 class="sol-class">Meditation App</h3>
                     <p class="class-port">App</p>
                 </li>
 
                 <li class="second-class list">
-                    <img src="./images/taxi.jpg"
-                    alt="Taxi"
-                    width="360"
-                    height="300" />
+                    <img src="./images/taxi.jpg" alt="Taxi" width="360" height="300" />
                     <h3 class="sol-class">Taxi Service</h3>
                     <p class="class-port">Marketing</p>
                 </li>
 
                 <li class="second-class list">
-                    <img src="./images/screen.jpg"
-                    alt="screen Illustrations"
-                    width="360"
-                    height="300" />
+                    <img src="./images/screen.jpg" alt="screen Illustrations" width="360" height="300" />
                     <h3 class="sol-class">Screen Illustrations</h3>
                     <p class="class-port">Design</p>
                 </li>
 
                 <li class="second-class list">
-                    <img src="./images/online.jpg"
-                    alt="Online Courses"
-                    width="360"
-                    height="300" />
+                    <img src="./images/online.jpg" alt="Online Courses" width="360" height="300" />
                     <h3 class="sol-class">Online Courses</h3>
                     <p class="class-port">Marketing</p>
                 </li>
@@ -188,4 +160,5 @@
         </p>
     </footer>
 </body>
+
 </html>
