--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
             </ul>
         </nav>
-        <address class="addresss-details">
+        <address class="address-details">
             <ul class="list">
                 <li>
                     <a href="mailto:info@devstudio.com" class="li-links link">info@devstudio.com</a>
@@ -153,7 +153,7 @@
         </section>
     </main>
 
-    <footer claas="portfolio">
+    <footer claas="portfolio-footer">
         <a class="logo" href="./index.html">Web<span class=studio-class>Studio</span>Studio</a>
         <p class="acapit">
             Increase the flow of customers and sales for your business with digital marketing & growth solutions.
