--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </section>
 
         <section class="team-section">
-            <h2 clss="last-class">Our Team</h2>
+            <h2 clss="team_class section">Our Team</h2>
             <ul class="list">
                 <li class="ourteam-section">
                     <img src="./images/01.Mark.jpg" alt="young man" width="264" height="260" />
@@ -112,7 +112,7 @@
         </section>
 
         <section class="team-section">
-            <h2 class="last-class">Our Portfolio</h2>
+            <h2 class="team_class section">Our Portfolio</h2>
             <ul class="list">
                 <li class="second-class list">
                     <img src="./images/bank.jpg" alt="Banking app" width="360" height="300" />
