--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         </section>
 
         <section class="team-section">
-            <h2 class="team_class section">Our Portfolio</h2>
+            <h2 class="apss-class">Our Portfolio</h2>
             <ul class="list">
                 <li class="second-class list">
                     <img src="./images/bank.jpg" alt="Banking app" width="360" height="300" />
