--- a/index.html
+++ b/index.html
@@ -2,162 +2,139 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,700;1,700&family=Roboto:wght@400;500;700&display=swap"
-        rel="stylesheet">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="CSS/styles.css" rel="stylesheet" />
+    <title>Our Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
     <header>
-        <nav>
-            <a href="./index.html" class="logo">
-                WEB<span class="studio-color">Studio</span>
-            </a>
-            <ul class="list">
-                <li>
-                    <a href="./index.html" class="logo-class font link">Studio</a>
-                </li>
-                <li>
-                    <a href="" class="logo-class font link">Portfolio</a>
-                </li>
-                <li>
-                    <a href="" class="logo-class font link">Contacts</a>
-                </li>
+        <nav class="navigation-links">
+            <a href="./index.html" class="logo">Web<span class="studio-color">Studio</span></a>
+            <ul>
+                <li><a href="./index.html" class="link">Studio</a></li>
+                <li><a href="" class="link">Portfolio</a></li>
+                <li><a href="" class="link">Contacts</a></li>
             </ul>
         </nav>
         <address class="address-details">
-            <ul class="list">
-                <li>
-                    <a href="mailto:info@devstudio.com" class="li-links link">info@devstudio.com</a>
-                </li>
-                <li>
-                    <a href="tel:+110001111111" class="li-links link">+11 (000) 111-11-11</a>
-                </li>
+            <ul>
+                <li><a href="mailto:info@devstudio.com" class="li-link">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111" class="li-link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
     </header>
+
     <main>
         <section class="section-details">
-            <h1 class="top-class">Effective Solutions for Your Business</h1>
+            <h1 class="top-class-text">Effective Solutions for Your Business</h1>
             <button type="button" class="button-class">Order Service</button>
         </section>
 
         <section>
-            <h2 class="philosophy">Ore Philosophy</h2>
-            <ul class="list">
+            <h2 class="philosophy-header-title">Our Features</h2>
+            <ul>
                 <li>
                     <h3 class="sol-class">Strategy</h3>
-                    <p class="class-port">
-                        Our goal is to identify the business problem to walk away with the perfect and creative
-                        solution.
-                    </p>
+                    <p class="p-section-text">Our goal is to identify the business problem to walk away with the perfect
+                        and creative solution.</p>
                 </li>
                 <li>
                     <h3 class="sol-class">Punctuality</h3>
-                    <p class="class-port">
-                        Bring the key message to the brand's audience for the best price within the shortest possible
-                        time.
-                    </p>
+                    <p class="p-section-text">Bring the key message to the brand's audience for the best price within
+                        the shortest possible time.</p>
                 </li>
                 <li>
                     <h3 class="sol-class">Diligence</h3>
-                    <p class="class-port">
-                        Research and confirm brands that present the strongest digital growth opportunities and minimize
-                        risk.
-                    </p>
+                    <p class="p-section-text">Research and confirm brands that present the strongest digital growth
+                        opportunities and minimize risk.</p>
                 </li>
                 <li>
                     <h3 class="sol-class">Technologies</h3>
-                    <p class="class-port">
-                        Design practice focused on digital experiences. We bring forth a deep passion for
-                        problem-solving.
-                    </p>
+                    <p class="p-section-text">Design practice focused on digital experiences. We bring forth a deep
+                        passion for problem-solving.</p>
                 </li>
             </ul>
         </section>
 
         <section class="team-section">
-            <h2 clss="our-team">Our Team</h2>
-            <ul class="list">
+            <h2 class="philosophy-header-title">Our Team</h2>
+            <ul>
                 <li class="ourteam-section">
-                    <img src="./images/01.Mark.jpg" alt="young man" width="264" height="260" />
+                    <img src="./images/01.Mark.jpg" alt="Team member1" width="264" />
                     <h3 class="sol-class">Mark Guerrero</h3>
-                    <p class="class-port">Product Designer</p>
+                    <p class="p-section-text">Product Designer</p>
                 </li>
-
                 <li class="ourteam-section">
-                    <img src="./images/02.Tom.jpg" alt="young man" width="264" height="260" />
+                    <img src="./images/02.Tom.jpg" alt="Team member2" width="264" />
                     <h3 class="sol-class">Tom Ford</h3>
-                    <p class="class-port">Frontend Developer</p>
+                    <p class="p-section-text">Frontend Developer</p>
                 </li>
-
                 <li class="ourteam-section">
-                    <img src="./images/03.Camila.jpg" alt="young women" width="264" height="260" />
+                    <img src="./images/03.Camila.jpg" alt="Team member3" width="264" />
                     <h3 class="sol-class">Camila Garcia</h3>
-                    <p class="class-port">Marketing</p>
+                    <p class="p-section-text">Marketing</p>
                 </li>
-
                 <li class="ourteam-section">
-                    <img src="./images/04.Daniel.jpg" alt="young man" width="264" height="260" />
+                    <img src="./images/04.Daniel.jpg" alt="Team member4" width="264" />
                     <h3 class="sol-class">Daniel Wilson</h3>
-                    <p class="class-port">UI Designer</p>
+                    <p class="p-section-text">UI Designer</p>
                 </li>
             </ul>
         </section>
 
-        <section class="team-section">
-            <h2 class="team-aps">Our Portfolio</h2>
-            <ul class="list">
-                <li class="second-class list">
-                    <img src="./images/bank.jpg" alt="Banking app" width="360" height="300" />
-                    <h3 class="sol-class">Banking App</h3>
-                    <p class="class-port">App</p>
+        <section>
+            <h2 class="philosophy-header-title">Our Portfolio</h2>
+            <ul>
+                <li>
+                    <img src="./images/bank.jpg" alt="payment" width="360" />
+                    <h3 class="header-title">Banking App</h3>
+                    <p class="p-section-text">App</p>
                 </li>
 
-                <li class="second-class list">
-                    <img src="./images/cas.jpg" alt="Cashless payment" width="360" height="300" />
-                    <h3 class="sol-class">Cashless Payment</h3>
-                    <p class="class-port">Marketing</p>
+                <li>
+                    <img src="./images/cas.jpg" alt="payment" width="360" />
+                    <h3 class="header-title">Cashless Payment</h3>
+                    <p class="p-section-text">Marketing</p>
                 </li>
 
-                <li class="second-class list">
-                    <img src="./images/app.jpg" alt="Medition App" width="360" height="300" />
-                    <h3 class="sol-class">Meditation App</h3>
-                    <p class="class-port">App</p>
+                <li>
+                    <img src="./images/app.jpg" alt="app" width="360" />
+                    <h3 class="header-title">Meditation App</h3>
+                    <p class="p-section-text">App</p>
                 </li>
 
-                <li class="second-class list">
-                    <img src="./images/taxi.jpg" alt="Taxi" width="360" height="300" />
-                    <h3 class="sol-class">Taxi Service</h3>
-                    <p class="class-port">Marketing</p>
+                <li>
+                    <img src="./images/taxi.jpg" alt="taxi" width="360" />
+                    <h3 class="header-title">Taxi Service</h3>
+                    <p class="p-section-text">Marketing</p>
                 </li>
 
-                <li class="second-class list">
-                    <img src="./images/screen.jpg" alt="screen Illustrations" width="360" height="300" />
-                    <h3 class="sol-class">Screen Illustrations</h3>
-                    <p class="class-port">Design</p>
+                <li>
+                    <img src="./images/screen.jpg" alt="phone" width="360" />
+                    <h3 class="header-title">Screen Illustrations</h3>
+                    <p class="p-section-text">Design</p>
                 </li>
 
-                <li class="second-class list">
-                    <img src="./images/online.jpg" alt="Online Courses" width="360" height="300" />
-                    <h3 class="sol-class">Online Courses</h3>
-                    <p class="class-port">Marketing</p>
+                <li>
+                    <img src="./images/online.jpg" alt="courses" width="360" />
+                    <h3 class="header-title">Online Courses</h3>
+                    <p class="p-section-text">Marketing</p>
                 </li>
             </ul>
         </section>
     </main>
 
-    <footer claas="portfolio-footer">
-        <a class="logo" href="./index.html">Web<span class=studio-class>Studio</span>Studio</a>
-        <p class="acapit">
-            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-        </p>
+    <footer class="footer-portfolio">
+        <a href="./index.html" class="footer-portfolio">Web<span class="logo-white">Studio</span></a>
+        <p></p>
+        <p class="footer-last-text">Increase the flow of customers and sales for your business with digital marketing
+            & growth solutions.</p>
     </footer>
 </body>
 
