--- a/index.html
+++ b/index.html
@@ -93,37 +93,37 @@
             <ul>
                 <li>
                     <img src="./images/bank.jpg" alt="payment" width="360" />
-                    <h3 class="header-title">Banking App</h3>
+                    <h3 class="sol-class">Banking App</h3>
                     <p class="p-section-text">App</p>
                 </li>
 
                 <li>
                     <img src="./images/cas.jpg" alt="payment" width="360" />
-                    <h3 class="header-title">Cashless Payment</h3>
+                    <h3 class="sol-class">Cashless Payment</h3>
                     <p class="p-section-text">Marketing</p>
                 </li>
 
                 <li>
                     <img src="./images/app.jpg" alt="app" width="360" />
-                    <h3 class="header-title">Meditation App</h3>
+                    <h3 class="sol-class">Meditation App</h3>
                     <p class="p-section-text">App</p>
                 </li>
 
                 <li>
                     <img src="./images/taxi.jpg" alt="taxi" width="360" />
-                    <h3 class="header-title">Taxi Service</h3>
+                    <h3 class="sol-class">Taxi Service</h3>
                     <p class="p-section-text">Marketing</p>
                 </li>
 
                 <li>
                     <img src="./images/screen.jpg" alt="phone" width="360" />
-                    <h3 class="header-title">Screen Illustrations</h3>
+                    <h3 class="sol-class">Screen Illustrations</h3>
                     <p class="p-section-text">Design</p>
                 </li>
 
                 <li>
                     <img src="./images/online.jpg" alt="courses" width="360" />
-                    <h3 class="header-title">Online Courses</h3>
+                    <h3 class="sol-class">Online Courses</h3>
                     <p class="p-section-text">Marketing</p>
                 </li>
             </ul>
