--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     </main>
 
     <footer class="footer-portfolio">
-        <a href="./index.html" class="footer-portfolio">Web<span class="logo-white">Studio</span></a>
+        <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
         <p></p>
         <p class="footer-last-text">Increase the flow of customers and sales for your business with digital marketing
             & growth solutions.</p>
