--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     <footer class="footer-portfolio">
         <a href="./index.html" class="footer-logo">Web<span class="logo-white">Studio</span></a>
         <p></p>
-        <p class="link">Increase the flow of customers and sales for your business with digital marketing
+        <p class="acapit-footer-text">Increase the flow of customers and sales for your business with digital marketing
             & growth solutions.</p>
     </footer>
 </body>
